[package]
name = "labs-json-to-str-sm"
version = "0.1.2"
authors = ["Fluvio Contributors <team@fluvio.io>"]
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ['cdylib']

[dependencies]
fluvio-smartmodule = "0.7.2"

once_cell = { version = "1.17.1", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
eyre = { version = "0.6.8", default-features = false }
dyn-fmt = "0.4.0"
json_value_merge = "2.0.0"
# chrono = "0.4.38"

[profile.release-lto]
inherits = "release"
lto = true
strip = "symbols"
